--- a/TODO.txt
+++ b/TODO.txt
@@ -18,5 +18,5 @@ TODO
 5.2 зміна паролю
 5.3 додавання особистих даних і фотографій
 5.4 список друзів
-5.5 стрічка запитань і відповідей друзів
+5.5 стрічка запитань і відповідей друзів1
 
